# windburglr

./: .app.py.swn  .app.py.swo  .app.py.swp  .gitignore  .martin.py.swp  .replit  .scrape-iids.py.swo  .scrape-iids.py.swp  LICENSE  Procfile  README.md  TODO  app.py  main.py  nginx.conf  pyproject.toml  replit.nix  replit.nix.save  requirements.txt  scrape-iids.py  start.sh
.github/workflows/: sentry_release.yml
common/: initial_data.sql  migration_0001.sql  timescaledb_schema.sql
scraper/: .dockerignore  AGENTS.md  Dockerfile  README.md  TODO.md  flake.nix  fly-deploy.sh  fly.toml  manifest.yml  pyproject.toml  pytest.ini  requirements.txt  schema.sql  schema_mysql.sql  scrape-iids.py  shell.nix  windburglr.toml.example
scraper/tests/: conftest.py
scraper/tests/integration/: test_database_integration.py  test_end_to_end.py  test_main_integration.py
scraper/tests/unit/: test_config.py  test_models.py  test_scraper.py
scraper/windscraper/: __init__.py  __main__.py  config.py  database.py  main.py  models.py  scraper.py
templates/: .basic.html.swp  basic.html
webapp/: AGENTS.md  Dockerfile  Makefile  README-Frontend.md  README-Testing.md  README.md  STORE-IMPLEMENTATION.md  TESTING.md  TODO  TODO.md  build_frontend.py  debug-navigation.html  dev-setup.sh  flake.nix  flask_app.py  fly-deploy.sh  fly.toml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_tests.sh  shell.nix  standalone-test.html  start.sh  test-global-functions.html  test-minimal.html  test-navigation.html  test-store.html  vite.config.js  vitest.config.js  wsgi.py
webapp-fastapi/: AGENTS.md  README.md  TESTING.md  fly.toml  functions.sql  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup_notifications.sql  setup_real_database.py  start.sh  test_database.py  test_server.py
webapp-fastapi/app/: config.py  models.py
webapp-fastapi/app/cache/: __init__.py  abc.py  memory.py
webapp-fastapi/app/routers/: __init__.py  api.py  health.py  websocket.py
webapp-fastapi/app/services/: websocket.py  wind_data.py
webapp-fastapi/static/: style.css
webapp-fastapi/templates/: index.html
webapp-fastapi/tests/: .env.test  conftest.py
webapp-fastapi/tests/e2e/: conftest.py  test_frontend.py
webapp-fastapi/tests/fixtures/: data.py  database.py  test_database.py
webapp-fastapi/tests/integration/: test_api.py  test_api_with_real_db.py  test_integration.py
webapp-fastapi/tests/unit/: test_api.py  test_api_endpoints.py  test_api_sync.py  test_database_operations.py  test_websocket.py
webapp/app/: config.py  database.py  dependencies.py  models.py
webapp/app/cache/: __init__.py  abc.py  factory.py  memory.py
webapp/app/routers/: __init__.py  api.py  health.py  web.py  websocket.py
webapp/app/services/: notifications.py  station.py  watchdog.py  websocket.py  wind_data.py
webapp/app/utils/: suspension_detector.py
webapp/src/: main.js
webapp/src/chart/: config.js  zoom.js  zoom.test.js
webapp/src/store/: store.js  store.test.js
webapp/src/styles/: base.css  charts.css  controls.css  header.css  index.css  popups.css  responsive.css  variables.css
webapp/src/test/: setup.js  test-global-functions.html  test-minimal.html  test-navigation.html  test-simple.html  test-store.html
webapp/src/ui/: conditions.js  ghostrider.js  ghostrider.test.js  mobile.js  scraper-status.js  scraper-status.test.js
webapp/src/utils/: data.js  data.test.js  time.js  time.test.js
webapp/src/websocket/: connection.js
webapp/static/: mobile.css  site.css  site.webmanifest  style.css
webapp/templates/: base.html  basic.html  current.html  day.html  hello.html  index.html
webapp/tests/: conftest.py
webapp/tests/e2e/: conftest.py  test_frontend.py
webapp/tests/integration/: test_api.py  test_integration.py
webapp/tests/unit/: test_api.py  test_scraper_status.py  test_websocket.py
