[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windscraper"
version = "0.1.0"
description = "Windburglr data scraper"
authors = [
    {name = "Martin Hill", email = "martin@hillm.net"},
]
dependencies = [
    "simplejson>=3.17.2,<4.0",
    "requests>=2.24.0,<3.0",
    "aiohttp>=3.6.2,<4.0",
    "asyncpg>=0.28.0",
    "pydantic>=2.11.9"
]
requires-python = ">=3.13"

[project.scripts]
windscraper = "windscraper.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.303"
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["__pycache__", ".venv", ".git", "htmlcov", "tests/", "scrape-iids.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["E501", "S104"]

[tool.ruff.lint.per-file-ignores]
"__pycache__" = ["E501"]
"tests/*" = ["S101"]     # Allow assert statements in tests
"main.py" = ["T201"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
exclude = ["__pycache__", ".venv", ".git", "htmlcov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--cov=main",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "asyncio: Async tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
exclude_also = ['if __name__ == .__main__.:', 'except Exception']

[tool.uv]
package = false
