[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windburglr"
version = "0.1.0"
description = "Real-time wind data visualization and alerting system"
authors = [{ name = "Martin Hill" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.335",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__pycache__" = ["E501"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
exclude = ["__pycache__", ".venv", ".git"]
